<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visinmisi"
                android:textSize="50sp"
                android:textColor="#FF9800"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vsi"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:paddingStart="10dp"
            android:textColor="@color/teal_700"
            android:paddingEnd="10dp"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry"
            android:background="@drawable/backround"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visi"
            android:background="@drawable/bakron"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry"
            android:textSize="23sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msi"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:background="@drawable/backround"
            android:paddingEnd="10dp"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:textColor="@color/teal_700"
            tools:ignore="RtlSymmetry"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misi"
            android:textSize="24sp"
            android:background="@drawable/bakron"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry"/>
    </LinearLayout>
</ScrollView>