<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sekolah"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#FF9800"
                android:fontFamily="sans-serif-black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tahunajar"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/datasekul"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@drawable/bakron"
            android:textSize="19dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry"/>
    </LinearLayout>
</ScrollView>