<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/llay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musola"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/penjelasanperpus"
                    android:background="@color/teal_200"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perpustakaan"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/penjelasanperpus"
                    android:background="@color/teal_200"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_komputer"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/penjelasanperpus"
                    android:background="@color/teal_200"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>